Update Installer App: fix black patch, center align images, and increase image sizes in first sections

--- a/app/globals.css
+++ b/app/globals.css
@@ -137,6 +137,9 @@
     .img-scale-1-944 {
       transform: scale(1.944);
     }
+    .img-scale-2 {
+      transform: scale(2);
+    }
     .img-scale-2-16 {
       transform: scale(2.16);
     }
